--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@walletconnect/web3-provider": "^1.7.0",
+    "firebase": "^8.2.1",
     "next": "latest",
+    "next-auth": "^3.24.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-loader-spinner": "^4.0.0",
+    "react-moralis": "^0.3.1",
+    "timeago-react": "^3.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
